Fixed the spacing between the leaderboard ad and the previous node

--- a/drupal/sites/all/themes/fresh/sass/fresh.scss
+++ b/drupal/sites/all/themes/fresh/sass/fresh.scss
@@ -47,7 +47,8 @@
 
 @include breakpoint($breakpoint-phablet){
  .row {
-  margin: 0;
+  margin-right: 0;
+  margin-left: 0;
  }
 }
 
